--- a/app.json
+++ b/app.json
@@ -324,6 +324,69 @@
           }
         ]
       },{
+        "id":"set_charge_mode",
+        "title":{
+           "en":"Set charge limit mode",
+           "nl":"Instellen oplaad modus"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter":"driver_id=models"
+          },{
+            "name": "chargemode",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "standard",
+                "label": {
+                  "en": "Standard", "nl": "Standaard"
+                }
+              },{
+                "id": "max_range",
+                "label": {
+                  "en": "Max range", "nl": "Maximaal bereik"
+                }
+              }
+            ]
+          }
+        ]
+      },{
+        "id":"set_charge_limit",
+        "title":{
+           "en":"Set charge limit %",
+           "nl":"Instellen oplaad limiet %"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter":"driver_id=models"
+          },{
+            "name": "limit",
+            "type": "range",
+            "min": 10,
+            "max": 100,
+            "step": 1,
+            "label": "%",
+            "labelDecimals": 0
+          }
+        ]
+      },{
+        "id":"charge_port_open",
+        "title":{
+           "en":"Open charge port",
+           "nl":"Openen oplaadpunt"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter":"driver_id=models"
+          }
+        ]
+      },{
         "id":"set_valet_mode",
         "title":{
            "en":"Valet mode",
