--- a/app.json
+++ b/app.json
@@ -15,8 +15,8 @@
     "website":"http://github.com/irritanterik/"
   },
   "images":{
-    "large":"./assets/images/large.jpg",
-    "small":"./assets/images/small.jpg"
+    "large":"./assets/images/large.png",
+    "small":"./assets/images/small.png"
   },
   "category":"tools",
   "permissions":[
