--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "id":"com.tesla",
-  "version":"1.0.1",
-  "compatibility":">=0.10.9",
+  "version":"1.1.0",
+  "compatibility":">=1.0.0",
   "name":{
     "en":"Tesla",
     "nl":"Tesla"
@@ -38,7 +38,19 @@
         "en": "Lat Lng"
       },
       "desc": {
-        "en": "Location of tracker"
+        "en": "GPS location"
+      },
+      "getable": true,
+      "setable": false
+    },
+    "location_human": {
+      "type": "string",
+      "title": {
+        "en": "Location",
+        "nl": "Positie"
+      },
+      "desc": {
+        "en": "Location"
       },
       "getable": true,
       "setable": false
@@ -69,7 +81,38 @@
         "small":"drivers/models/assets/images/small.jpg"
       },
       "class":"other",
-      "capabilities":["location", "moving"],
+      "capabilities":["location", "location_human", "moving"],
+      "mobile": {
+        "components": [
+          {
+            "id": "icon",
+            "capabilities": []
+          },
+          {
+            "id": "sensor",
+            "capabilities": ["moving", "location_human"],
+            "options": {
+              "icons": {
+                "moving": "/assets/gauge_icon.svg",
+                "location_human": "/assets/location_icon.svg"
+              },
+              "moving": {
+                "noblink": true,
+                "label": {
+                  "true": {
+                    "en": "Driving",
+                    "nl": "Rijdt"
+                  },
+                  "false": {
+                    "en": "Not driving",
+                    "nl": "Staat stil"
+                  }
+                }
+              }
+            }
+          }
+        ]
+      },
       "settings":[
         {
           "type":"group",
